# ask_azra

./: LICENSE  README.md  manage.py  pyproject.toml
ask_azra/: asgi.py  settings.py  urls.py  views.py  wsgi.py
questions/: forms.py  models.py  urls.py  views.py
questions/migrations/: 0001_initial.py
templates/: 404.html  500.html  base.html
templates/questions/: ask_question.html  delete_answer.html  delete_question.html  edit_answer.html  edit_question.html  home.html  question_detail.html
templates/users/: login.html  profile.html  profile_update.html  register.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
