[tool.poetry]
name = "ask-azra"
version = "0.1.0"
description = ""
authors = ["Tariq Jamal A <tariqjamal4267324@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
django-widget-tweaks = "^1.5.0"
pillow = "^11.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.djlint]
blank_line_after_tag="load,extends,include,block,endblock,comment,endcomment,for,endfor,if,endif"
blank_line_before_tag="load,extends,include,block,endblock,comment,endcomment,for,endfor,if,endif"
close_void_tags=true
exclude=".venv,venv,env"
format_attribute_template_tags=true
format_css=true
format_js=true
indent_size=4
max_line_length=120